<resources>
    <string name="app_name">InvestMe</string>

    <string name="content_authority">ru.getlect.investme.investme</string>
    <string name="sync_account_type" translatable="false">ru.getlect.investme.investme</string>

    <string name="action_settings">Settings</string>

    //mainActivity strings
    <string name="top_deposits">Top deposits</string>
    <string name="deposit_calculator">Deposit calculator</string>
    <string name="currency">Currency</string>


    //Deposit calculator activity strings
    <string name="deposit_sum">Amount of deposit</string>
    <string name="string_rubles">rubles</string>
    <string name="deposit_rate">Rate of Interest </string>
    <string name="percentage_symbol">%</string>
    <string name="deposit_period">Period</string>
    <string name="days">days</string>
    <string name="capitalization">Capitalization</string>
    <string name="replenishment">Replenishment</string>
    <string name="replenishment_amount">Replenishment amount</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="calculate">CALCULATE</string>

    <string-array name="deposit_period">
        <item>@string/weekly</item>
        <item>@string/monthly</item>
        <item>@string/quarterly</item>
    </string-array>

    <string name="calculate_data_warning">Amount,rate and period of deposit are necessary.Please fill them!</string>


    //Deposit calculator result
    <string name="deposit_sumR">Amount of deposit:</string>
    <string name="deposit_rateR">Rate of Interest:</string>
    <string name="deposit_periodR">Period:</string>
    <string name="you_invested">You invested:</string>
    <string name="you_will_receive">You will receive:</string>
    <string name="amount_of_money">Amount of money:</string>
    <string name="effective_IR">Effective interest rate:</string>
    <string name="interest_earned">Interest earned:</string>
    <string name="withdrawal">Withdrawal</string>


    //Currency activity
    <string name="cur_dollar">USA Dollar</string>
    <string name="cur_euro">Euro</string>
    <string name="cur_oil">Brent oil</string>
    <string name="cur_gold">Gold</string>
    <string name="cur_silver">Silver</string>


    //Currency detail
    <string name="current">Current</string>
    <string name="action_share">Share</string>
    <string name="share_info">Current price for </string>
    <string name="is">is </string>

    //Deposits top
    <string name="maxRate">Maximum rate:</string>
    <string name="minAmount">Minimum amount:</string>
    <string name="minPeriod">Min period, months:</string>





</resources>
