<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="@drawable/touch_selector"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="21dp"
            android:id="@+id/tv_deposit" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maxRate"
                android:paddingRight="15dp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_maxRate" />



        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/minAmount"

                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_minAmount" />


           </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minPeriod"
                    android:layout_weight="1"
                    android:paddingRight="15dp"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_minPeriod" />

            </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bank_placeholder"
            android:id="@+id/iv_bank_logo" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capitalization"
            android:visibility="invisible"
            android:checked="false"
            android:id="@+id/capitalization" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replenishment"
            android:visibility="invisible"
            android:checked="false"
            android:id="@+id/replenishment" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal"
            android:visibility="invisible"
            android:checked="false"
            android:id="@+id/withdrawal" />




    </LinearLayout>







</LinearLayout>