<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffcdd3de"

    >


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/action_bar_color"
        android:id="@+id/toolbar_currencies"
        >



    </android.support.v7.widget.Toolbar>




    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeeeeee"
    android:gravity="center_vertical"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:background="#fffffdf7"
        android:layout_marginBottom="10dp"
        android:id="@+id/currncy_ll_dollar"
        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/dollar"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cur_dollar"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="26dp"
            android:gravity="center_vertical|center_horizontal"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:id="@+id/tv_dollar_cur"
            android:paddingLeft="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="21dp" />





    </LinearLayout>


    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:background="#fffffdf7"
        android:layout_marginBottom="10dp"
        android:id="@+id/currncy_ll_euro"
        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/euro"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cur_euro"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="26dp"
            android:gravity="center_vertical|center_horizontal"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="21dp"
            android:paddingLeft="5dp"
            android:id="@+id/tv_euro_cur" />





    </LinearLayout>



    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:background="#fffffdf7"
        android:layout_marginBottom="10dp"
        android:id="@+id/currncy_ll_gold"
        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/gold"
          />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cur_gold"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="26dp"
            android:gravity="center_vertical|center_horizontal"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18dp"
            android:paddingLeft="5dp"
            android:id="@+id/tv_gold_cur" />





    </LinearLayout>



    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:background="#fffffdf7"
        android:layout_marginBottom="10dp"
        android:id="@+id/currncy_ll_silver"

        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/silver"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cur_silver"
            android:textStyle="bold"
            android:layout_weight="1"
            android:maxLines="1"
            android:textSize="26dp"

            android:gravity="center_vertical|center_horizontal"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18dp"
            android:id="@+id/tv_silver_cur"
            android:paddingLeft="5dp"
             />




    </LinearLayout>

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:background="#fffffdf7"
        android:layout_marginBottom="10dp"
        android:id="@+id/currncy_ll_oil"

        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/oil"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cur_oil"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="26dp"
            android:gravity="center_vertical|center_horizontal"
           />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/tv_oil_cur"
            android:paddingLeft="5dp"
            android:textSize="18dp" />





    </LinearLayout>










</LinearLayout>

</LinearLayout>